2011-06-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Separate ISR scratch and alt sig stack allocations.

	* configure.ac (AC_CHECK_HEADERS_ONCE): Remove ucontext.h.
	(NEED_WOE_UCONTEXT_H): Delete RCS_CBOOL.

2011-06-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Enable conditional dependencies for gnulib.

	* autogen.sh: Specify ‘--conditional-dependencies’ to gnulib-tool.
	* m4/gnulib-cache.m4 (gl_CONDITIONAL_DEPENDENCIES): New macro call.
	(gl_WITNESS_C_DOMAIN): Likewise.

2011-06-10  Thien-Thi Nguyen  <ttn@ambire>

	[build int] Don't look for ed(1) if diff3(1) is sane enough.

	* configure.ac (ED): Conditionalize: Set shell var and do
	‘RCS_ABSOLUTE_PROGRAM’ only if diff3 is not sane enough.

2011-02-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Fix bug: Distribute doc/fdl.texi, too!

	Omission from 2010-03-09, "Add texinfo manual".

	* doc/Makefile.am (rcs_TEXINFOS): New var.

2011-02-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Document rcsclean(1) invoked w/o file specified.

	* doc/rcs.texi (rcsclean): In usage line, make ‘file ...’
	optional; briefly describe operation when no file specified.

2011-01-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.97


2011-01-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Document ‘YYYY-DDD’ and ‘YYYY-wWW-D’.

	* doc/rcs.texi (Date option): Document support
	for ‘YYYY-DDD’ and ‘YYYY-wWW-D’ date-only formats.

2011-01-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Fix bug: Mention Panagiotis E. Hadjidoukas.

	Omission from 2011-01-11, "Use bundled woe/ucontext.h for cygwin."

	* doc/rcs.texi (Credits): Mention embedded
	library written by Panagiotis E. Hadjidoukas.

2011-01-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Consider ‘EXEEXT’ when searching for peer programs.

	* configure.ac: If shell var ‘EXEEXT’ is non-empty,
	‘AC_DEFINE_UNQUOTED’ C #define ‘EXEEXT’, with its string value.

2011-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use bundled woe/ucontext.h for cygwin.
